Proyecto2/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DECIMAL

Grammar

Rule 0     S' -> s
Rule 1     s -> block
Rule 2     block -> block instruccion
Rule 3     block -> instruccion
Rule 4     instruccion -> print
Rule 5     instruccion -> ifinstruction
Rule 6     instruccion -> whileinstruction
Rule 7     instruccion -> declaration
Rule 8     instruccion -> arraydeclaration
Rule 9     instruccion -> assignment
Rule 10    instruccion -> breakstmt
Rule 11    instruccion -> continuestmt
Rule 12    instruccion -> functionstmt
Rule 13    instruccion -> call
Rule 14    instruccion -> returnstmt
Rule 15    instruccion -> interfacecreation
Rule 16    instruccion -> interdeclaration
Rule 17    print -> CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
Rule 18    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
Rule 19    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 20    whileinstruction -> WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 21    declaration -> VAR ID DOSPTS type IG expression PYC
Rule 22    arraydeclaration -> VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
Rule 23    interdeclaration -> VAR ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC
Rule 24    interfaceContent -> interfaceContent COMA ID DOSPTS expression
Rule 25    interfaceContent -> ID DOSPTS expression
Rule 26    assignment -> ID IG expression PYC
Rule 27    returnstmt -> RETURN expression PYC
Rule 28    returnstmt -> RETURN PYC
Rule 29    call -> ID PARIZQ expressionList PARDER PYC
Rule 30    call -> ID PARIZQ PARDER PYC
Rule 31    functionstmt -> FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
Rule 32    funcparams -> PARIZQ paramsList PARDER
Rule 33    funcparams -> PARIZQ PARDER
Rule 34    interfacecreation -> INTERFACE ID LLAVEIZQ attributeList LLAVEDER PYC
Rule 35    attributeList -> attributeList ID DOSPTS type PYC
Rule 36    attributeList -> ID DOSPTS type PYC
Rule 37    paramsList -> paramsList COMA ID DOSPTS type
Rule 38    paramsList -> ID DOSPTS type
Rule 39    functype -> DOSPTS type
Rule 40    functype -> <empty>
Rule 41    breakstmt -> BREAK PYC
Rule 42    continuestmt -> CONTINUE PYC
Rule 43    type -> NUMBER
Rule 44    type -> FLOAT
Rule 45    type -> STRING
Rule 46    type -> BOOL
Rule 47    expressionList -> expressionList COMA expression
Rule 48    expressionList -> expression
Rule 49    expression -> expression MAS expression
Rule 50    expression -> expression MENOS expression
Rule 51    expression -> expression POR expression
Rule 52    expression -> expression DIVIDIDO expression
Rule 53    expression -> expression MAYOR expression
Rule 54    expression -> expression MENOR expression
Rule 55    expression -> expression MAYORIG expression
Rule 56    expression -> expression MENORIG expression
Rule 57    expression -> expression IGIG expression
Rule 58    expression -> expression DIF expression
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> NOT expression
Rule 62    expression -> PARIZQ expression PARDER
Rule 63    expression -> expression TERN expression DOSPTS expression
Rule 64    expression -> ENTERO
Rule 65    expression -> CADENA
Rule 66    expression -> listArray
Rule 67    expression -> CORIZQ expressionList CORDER
Rule 68    expression -> ID PARIZQ expressionList PARDER
Rule 69    expression -> ID PARIZQ PARDER
Rule 70    listArray -> ID CORIZQ expression CORDER
Rule 71    listArray -> ID

Terminals, with rules where they appear

AND                  : 59
BOOL                 : 46
BREAK                : 41
CADENA               : 65
COMA                 : 24 37 47
CONSOLE              : 17
CONTINUE             : 42
CORDER               : 22 67 70
CORIZQ               : 22 67 70
DECIMAL              : 
DIF                  : 58
DIVIDIDO             : 52
DOSPTS               : 21 22 23 24 25 35 36 37 38 39 63
ELSE                 : 18
ENTERO               : 64
FLOAT                : 44
FUNC                 : 31
ID                   : 21 22 23 23 24 25 26 29 30 31 34 35 36 37 38 68 69 70 71
IF                   : 18 19
IG                   : 21 22 23 26
IGIG                 : 57
INTERFACE            : 34
LLAVEDER             : 18 18 19 20 23 31 34
LLAVEIZQ             : 18 18 19 20 23 31 34
LOG                  : 17
MAS                  : 49
MAYOR                : 53
MAYORIG              : 55
MENOR                : 54
MENORIG              : 56
MENOS                : 50
NOT                  : 61
NUMBER               : 43
OR                   : 60
PARDER               : 17 18 19 20 29 30 32 33 62 68 69
PARIZQ               : 17 18 19 20 29 30 32 33 62 68 69
POR                  : 51
PUNTO                : 17
PYC                  : 17 21 22 23 26 27 28 29 30 34 35 36 41 42
RETURN               : 27 28
STRING               : 45
TERN                 : 63
VAR                  : 21 22 23
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

arraydeclaration     : 8
assignment           : 9
attributeList        : 34 35
block                : 1 2 18 18 19 20 31
breakstmt            : 10
call                 : 13
continuestmt         : 11
declaration          : 7
expression           : 18 19 20 21 22 24 25 26 27 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62 63 63 63 70
expressionList       : 17 29 47 67 68
funcparams           : 31
functionstmt         : 12
functype             : 31
ifinstruction        : 5
instruccion          : 2 3
interdeclaration     : 16
interfaceContent     : 23 24
interfacecreation    : 15
listArray            : 66
paramsList           : 32 37
print                : 4
returnstmt           : 14
s                    : 0
type                 : 21 22 35 36 37 38 39
whileinstruction     : 6

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . block
    (2) block -> . block instruccion
    (3) block -> . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . whileinstruction
    (7) instruccion -> . declaration
    (8) instruccion -> . arraydeclaration
    (9) instruccion -> . assignment
    (10) instruccion -> . breakstmt
    (11) instruccion -> . continuestmt
    (12) instruccion -> . functionstmt
    (13) instruccion -> . call
    (14) instruccion -> . returnstmt
    (15) instruccion -> . interfacecreation
    (16) instruccion -> . interdeclaration
    (17) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (18) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (19) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (20) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (21) declaration -> . VAR ID DOSPTS type IG expression PYC
    (22) arraydeclaration -> . VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
    (26) assignment -> . ID IG expression PYC
    (41) breakstmt -> . BREAK PYC
    (42) continuestmt -> . CONTINUE PYC
    (31) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (29) call -> . ID PARIZQ expressionList PARDER PYC
    (30) call -> . ID PARIZQ PARDER PYC
    (27) returnstmt -> . RETURN expression PYC
    (28) returnstmt -> . RETURN PYC
    (34) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER PYC
    (23) interdeclaration -> . VAR ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC

    CONSOLE         shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    VAR             shift and go to state 20
    ID              shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    FUNC            shift and go to state 24
    RETURN          shift and go to state 25
    INTERFACE       shift and go to state 26

    s                              shift and go to state 1
    block                          shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    whileinstruction               shift and go to state 6
    declaration                    shift and go to state 7
    arraydeclaration               shift and go to state 8
    assignment                     shift and go to state 9
    breakstmt                      shift and go to state 10
    continuestmt                   shift and go to state 11
    functionstmt                   shift and go to state 12
    call                           shift and go to state 13
    returnstmt                     shift and go to state 14
    interfacecreation              shift and go to state 15
    interdeclaration               shift and go to state 16

state 1

    (0) S' -> s .



state 2

    (1) s -> block .
    (2) block -> block . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . whileinstruction
    (7) instruccion -> . declaration
    (8) instruccion -> . arraydeclaration
    (9) instruccion -> . assignment
    (10) instruccion -> . breakstmt
    (11) instruccion -> . continuestmt
    (12) instruccion -> . functionstmt
    (13) instruccion -> . call
    (14) instruccion -> . returnstmt
    (15) instruccion -> . interfacecreation
    (16) instruccion -> . interdeclaration
    (17) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PYC
    (18) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (19) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (20) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (21) declaration -> . VAR ID DOSPTS type IG expression PYC
    (22) arraydeclaration -> . VAR ID DOSPTS type CORIZQ CORDER IG expression PYC
    (26) assignment -> . ID IG expression PYC
    (41) breakstmt -> . BREAK PYC
    (42) continuestmt -> . CONTINUE PYC
    (31) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (29) call -> . ID PARIZQ expressionList PARDER PYC
    (30) call -> . ID PARIZQ PARDER PYC
    (27) returnstmt -> . RETURN expression PYC
    (28) returnstmt -> . RETURN PYC
    (34) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER PYC
    (23) interdeclaration -> . VAR ID DOSPTS ID IG LLAVEIZQ interfaceContent LLAVEDER PYC

    $end            reduce using rule 1 (s -> block .)
    CONSOLE         shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    VAR             shift and go to state 20
    ID              shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    FUNC            shift and go to state 24
    RETURN          shift and go to state 25
    INTERFACE       shift and go to state 26

    instruccion                    shift and go to state 27
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    whileinstruction               shift and go to state 6
    declaration                    shift and go to state 7
    arraydeclaration               shift and go to state 8
    assignment                     shift and go to state 9
    breakstmt                      shift and go to state 10
    continuestmt                   shift and go to state 11
    functionstmt                   shift and go to state 12
    call                           shift and go to state 13
    returnstmt                     shift and go to state 14
    interfacecreation              shift and go to state 15
    interdeclaration               shift and go to state 16

state 3

    (3) block -> instruccion .

    CONSOLE         reduce using rule 3 (block -> instruccion .)
    IF              reduce using rule 3 (block -> instruccion .)
    WHILE           reduce using rule 3 (block -> instruccion .)
    VAR             reduce using rule 3 (block -> instruccion .)
    ID              reduce using rule 3 (block -> instruccion .)
    BREAK           reduce using rule 3 (block -> instruccion .)
    CONTINUE        reduce using rule 3 (block -> instruccion .)
    FUNC            reduce using rule 3 (block -> instruccion .)
    RETURN          reduce using rule 3 (block -> instruccion .)
    INTERFACE       reduce using rule 3 (block -> instruccion .)
    $end            reduce using rule 3 (block -> instruccion .)
    LLAVEDER        reduce using rule 3 (block -> instruccion .)


state 4

    (4) instruccion -> print .

    CONSOLE         reduce using rule 4 (instruccion -> print .)
    IF              reduce using rule 4 (instruccion -> print .)
    WHILE           reduce using rule 4 (instruccion -> print .)
    VAR             reduce using rule 4 (instruccion -> print .)
    ID              reduce using rule 4 (instruccion -> print .)
    BREAK           reduce using rule 4 (instruccion -> print .)
    CONTINUE        reduce using rule 4 (instruccion -> print .)
    FUNC            reduce using rule 4 (instruccion -> print .)
    RETURN          reduce using rule 4 (instruccion -> print .)
    INTERFACE       reduce using rule 4 (instruccion -> print .)
    $end            reduce using rule 4 (instruccion -> print .)
    LLAVEDER        reduce using rule 4 (instruccion -> print .)


state 5

    (5) instruccion -> ifinstruction .

    CONSOLE         reduce using rule 5 (instruccion -> ifinstruction .)
    IF              reduce using rule 5 (instruccion -> ifinstruction .)
    WHILE           reduce using rule 5 (instruccion -> ifinstruction .)
    VAR             reduce using rule 5 (instruccion -> ifinstruction .)
    ID              reduce using rule 5 (instruccion -> ifinstruction .)
    BREAK           reduce using rule 5 (instruccion -> ifinstruction .)
    CONTINUE        reduce using rule 5 (instruccion -> ifinstruction .)
    FUNC            reduce using rule 5 (instruccion -> ifinstruction .)
    RETURN          reduce using rule 5 (instruccion -> ifinstruction .)
    INTERFACE       reduce using rule 5 (instruccion -> ifinstruction .)
    $end            reduce using rule 5 (instruccion -> ifinstruction .)
    LLAVEDER        reduce using rule 5 (instruccion -> ifinstruction .)


state 6

    (6) instruccion -> whileinstruction .

    CONSOLE         reduce using rule 6 (instruccion -> whileinstruction .)
    IF              reduce using rule 6 (instruccion -> whileinstruction .)
    WHILE           reduce using rule 6 (instruccion -> whileinstruction .)
    VAR             reduce using rule 6 (instruccion -> whileinstruction .)
    ID              reduce using rule 6 (instruccion -> whileinstruction .)
    BREAK           reduce using rule 6 (instruccion -> whileinstruction .)
    CONTINUE        reduce using rule 6 (instruccion -> whileinstruction .)
    FUNC            reduce using rule 6 (instruccion -> whileinstruction .)
    RETURN          reduce using rule 6 (instruccion -> whileinstruction .)
    INTERFACE       reduce using rule 6 (instruccion -> whileinstruction .)
    $end            reduce using rule 6 (instruccion -> whileinstruction .)
    LLAVEDER        reduce using rule 6 (instruccion -> whileinstruction .)


state 7

    (7) instruccion -> declaration .

    CONSOLE         reduce using rule 7 (instruccion -> declaration .)
    IF              reduce using rule 7 (instruccion -> declaration .)
    WHILE           reduce using rule 7 (instruccion -> declaration .)
    VAR             reduce using rule 7 (instruccion -> declaration .)
    ID              reduce using rule 7 (instruccion -> declaration .)
    BREAK           reduce using rule 7 (instruccion -> declaration .)
    CONTINUE        reduce using rule 7 (instruccion -> declaration .)
    FUNC            reduce using rule 7 (instruccion -> declaration .)
    RETURN          reduce using rule 7 (instruccion -> declaration .)
    INTERFACE       reduce using rule 7 (instruccion -> declaration .)
    $end            reduce using rule 7 (instruccion -> declaration .)
    LLAVEDER        reduce using rule 7 (instruccion -> declaration .)


state 8

    (8) instruccion -> arraydeclaration .

    CONSOLE         reduce using rule 8 (instruccion -> arraydeclaration .)
    IF              reduce using rule 8 (instruccion -> arraydeclaration .)
    WHILE           reduce using rule 8 (instruccion -> arraydeclaration .)
    VAR             reduce using rule 8 (instruccion -> arraydeclaration .)
    ID              reduce using rule 8 (instruccion -> arraydeclaration .)
    BREAK           reduce using rule 8 (instruccion -> arraydeclaration .)
    CONTINUE        reduce using rule 8 (instruccion -> arraydeclaration .)
    FUNC            reduce using rule 8 (instruccion -> arraydeclaration .)
    RETURN          reduce using rule 8 (instruccion -> arraydeclaration .)
    INTERFACE       reduce using rule 8 (instruccion -> arraydeclaration .)
    $end            reduce using rule 8 (instruccion -> arraydeclaration .)
    LLAVEDER        reduce using rule 8 (instruccion -> arraydeclaration .)


state 9

    (9) instruccion -> assignment .

    CONSOLE         reduce using rule 9 (instruccion -> assignment .)
    IF              reduce using rule 9 (instruccion -> assignment .)
    WHILE           reduce using rule 9 (instruccion -> assignment .)
    VAR             reduce using rule 9 (instruccion -> assignment .)
    ID              reduce using rule 9 (instruccion -> assignment .)
    BREAK           reduce using rule 9 (instruccion -> assignment .)
    CONTINUE        reduce using rule 9 (instruccion -> assignment .)
    FUNC            reduce using rule 9 (instruccion -> assignment .)
    RETURN          reduce using rule 9 (instruccion -> assignment .)
    INTERFACE       reduce using rule 9 (instruccion -> assignment .)
    $end            reduce using rule 9 (instruccion -> assignment .)
    LLAVEDER        reduce using rule 9 (instruccion -> assignment .)


state 10

    (10) instruccion -> breakstmt .

    CONSOLE         reduce using rule 10 (instruccion -> breakstmt .)
    IF              reduce using rule 10 (instruccion -> breakstmt .)
    WHILE           reduce using rule 10 (instruccion -> breakstmt .)
    VAR             reduce using rule 10 (instruccion -> breakstmt .)
    ID              reduce using rule 10 (instruccion -> breakstmt .)
    BREAK           reduce using rule 10 (instruccion -> breakstmt .)
    CONTINUE        reduce using rule 10 (instruccion -> breakstmt .)
    FUNC            reduce using rule 10 (instruccion -> breakstmt .)
    RETURN          reduce using rule 10 (instruccion -> breakstmt .)
    INTERFACE       reduce using rule 10 (instruccion -> breakstmt .)
    $end            reduce using rule 10 (instruccion -> breakstmt .)
    LLAVEDER        reduce using rule 10 (instruccion -> breakstmt .)


state 11

    (11) instruccion -> continuestmt .

    CONSOLE         reduce using rule 11 (instruccion -> continuestmt .)
    IF              reduce using rule 11 (instruccion -> continuestmt .)
    WHILE           reduce using rule 11 (instruccion -> continuestmt .)
    VAR             reduce using rule 11 (instruccion -> continuestmt .)
    ID              reduce using rule 11 (instruccion -> continuestmt .)
    BREAK           reduce using rule 11 (instruccion -> continuestmt .)
    CONTINUE        reduce using rule 11 (instruccion -> continuestmt .)
    FUNC            reduce using rule 11 (instruccion -> continuestmt .)
    RETURN          reduce using rule 11 (instruccion -> continuestmt .)
    INTERFACE       reduce using rule 11 (instruccion -> continuestmt .)
    $end            reduce using rule 11 (instruccion -> continuestmt .)
    LLAVEDER        reduce using rule 11 (instruccion -> continuestmt .)


state 12

    (12) instruccion -> functionstmt .
